[Java 17] Update src/main/java/com/example/java8/reflection/ReflectionUtils.java from Jira ticket JAVA-56
- Timestamp: 2024-12-04 19:21:10
- Source: Jira code review
- Ticket: JAVA-56
- File: src/main/java/com/example/java8/reflection/ReflectionUtils.java
- Branch: testing
- Type: Java 17 conversion